1.1.1 - not released yet

Bug fixes:
- [#5808] Use the correct package name for mkforms in composer.json
- [#5810] JavaScript error with multi-seat registration in IE
- [#5809] Allow mkforms 3.x
- [#5787] FE editor crash with PHP 7


1.1.0 - released 2017-02-18

Features:
- [#5782] Add a calendar file to the thank-you email

Bug fixes:
- [#5776] Cannot switch back to 1 attendee after entering additional names
- [#5771] "myself" checkbox value in the registration form not used correctly
- [#5780] Increase the allowed size of event images from 256kB to 2MB
- [#5757] Fix the version number in the ReST configuration
- [#5763] Make the edit record button compatible with TYPO CMS 7LTS
- [#5755] Test failure in EventMapper test
- [#5751] Exception in ListView once a Registration exists
- [#5746] Fix crash in FE for invalid date record

Changes:
- [#5769] Mark the extension as incompatible with PHP 7

Cleanup:
- [#5770] Rename RegistrationForm::setFormConfiguration
- [#5754] Improve unit test getFrontEndUserWithFrontEndUserReturnsFrontEndUserInstance


1.0.0 - released 2016-07-19

Features:
- [#5706] Use new IconFactory for TYPO3 CMS >= 7.6
- [#5655] Add a composer.json and a ClassAliasMap file for autoloading
- [#5656] Automatic canceling/confirmation of events
- [#5682] Add variables for the e-mail subject
- [#5676] Add EventMapper::findForAutomaticStatusChange
- [#5674] Also mute the notification e-mails to the organizer
- [#5673] Add variables for the event name and date for the cancel/confirm e-mails
- [#5666] Configuration for the maximum number of seats in the registration form
- [#5662] Add an EventStateService
- [#5660] Add an EmailService
- [#5664] Per-event flag for muting the notification emails
- [#5651] Convert the cron job to a Scheduler task
- [#5650] Limit the number of seats in the registration drop-down
- [#5653] Add a configuration for PDF rendering of the manual
- [#5628] Add a RealURL auto configuration

Bug fixes: